--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,12 @@
               "src/assets"
             ],
             "styles": [
+              "src/plugins/bootstrap/css/bootstrap.min.css",
+              "src/plugins/font-awesome/css/font-awesome.css",
+              "src/plugins/elegant_font/css/style.css",
+              "src/plugins/flexslider/flexslider.css",
+              "src/plugins/owl-carousel/owl.carousel.css",
+              "src/plugins/owl-carousel/owl.theme.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -33,7 +39,12 @@
               "src/plugins/jquery-match-height/jquery.matchHeight-min.js",
               "src/js/main.js",
               "src/plugins/flexslider/jquery.flexslider-min.js",
-              "src/js/flexslider-custom.js"
+              "src/js/flexslider-custom.js",
+              "src/plugins/jquery.validate.min.js",
+              "src/plugins/isMobile/isMobile.min.js",
+              "src/js/form-mobile-fix.js",
+              "src/plugins/owl-carousel/owl.carousel.js",
+              "src/js/owl-custom.js"
             ]
           },
           "configurations": {
