--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
               "src/js/owl-custom.js",
               "src/js/main.js",
               "src/plugins/Gallery/js/jquery.blueimp-gallery.min.js",
-              "src/plugins/Bootstrap-Image-Gallery/js/bootstrap-image-gallery.min.js"
+              "src/plugins/Bootstrap-Image-Gallery/js/bootstrap-image-gallery.min.js",
+              "src/js/form-submission-handler.js"
             ]
           },
           "configurations": {
