--- a/angular.json
+++ b/angular.json
@@ -45,10 +45,10 @@
               "src/js/form-mobile-fix.js",
               "src/plugins/owl-carousel/owl.carousel.js",
               "src/js/owl-custom.js",
-              "src/js/main.js",
               "src/plugins/Gallery/js/jquery.blueimp-gallery.min.js",
               "src/plugins/Bootstrap-Image-Gallery/js/bootstrap-image-gallery.min.js",
-              "src/js/form-submission-handler.js"
+              "src/js/form-submission-handler.js",
+              "src/js/main.js"
             ]
           },
           "configurations": {
